--- a/packages/nouns-webapp/src/pages/Vote/Vote.module.css
+++ b/packages/nouns-webapp/src/pages/Vote/Vote.module.css
@@ -192,9 +192,14 @@
 }
 
 .voteMetadataRowTitle {
-  margin-top: 0.1rem;
+  margin-top: 0.5rem;
 }
 
 .voteMetadataTime {
   min-width: 11rem;
+  text-align: right;
+}
+
+.snapshotBlock {
+  text-align: right;
 }
